[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool]
[tool.black]
line-length = 88
py39 = true

[tool.bandit]
exclude=["tests/*"]
targets=["src/"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/reference.html?highlight=minversion#configuration-options
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.flakeheaven]
# optionally inherit from remote config (or local if you want)
# base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
# specify any flake8 options. For example, exclude "example.py":
exclude = ["example.py"]
# make output nice
format = "grouped"
# 80 chars aren't enough in 21 century
max_line_length = 90
# show line of source code in output
show_source = true

# list of plugins and rules for them
[tool.flakeheaven.plugins]
# include everything in pyflakes except F401
pyflakes = ["+*", "-F401"]
# enable only codes from S100 to S199
# flake8-bandit = ["-*", "+S1??"]
# enable everything that starts from `flake8-`
"flake8-*" = ["+*"]
# explicitly disable plugin
# flake8-docstrings = ["-*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pylint = ["+F*", "+E*", "-E0611", "-E1101", "-E0401", "-E1102", "-E1123"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.1"
update_changelog_on_bump = true
tag_format = "$version"
version_files = [
    ".bumpversion.cfg:current_version",
    "README.md:version:",
    "{{cookiecutter.project_slug}}/README.md:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
