[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool]
[tool.black]
line-length = 88
py39 = true

[tool.bandit]
exclude=["tests/*"]
targets=["src/"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/reference.html?highlight=minversion#configuration-options
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.3.4"
update_changelog_on_bump = true
tag_format = "$version"
version_files = [
    ".bumpversion.cfg:current_version",
    "README.md:version:",
    "{{cookiecutter.project_slug}}/README.md:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
