[build-system]
requires = [
    "setuptools>=78",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.pkg_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = "{{ cookiecutter.supported_python_version }}"
license = "{{ cookiecutter.license }}"
authors = [
    { name = "{{ cookiecutter.author_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
]
maintainers = [
    { name = "{{ cookiecutter.author_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}" },
]
keywords = ["utility"]

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    {%- if cookiecutter.target_OS == "all" %}
    "Operating System :: OS Independent",
    {%- endif %}
    {%- if cookiecutter.target_OS == "windows" %}
    "Operating System :: Microsoft :: Windows",
    {%- endif %}
    {%- if cookiecutter.target_OS == "linux" %}
    "Operating System :: POSIX :: Linux",
    {%- endif %}
    {%- if cookiecutter.target_OS == "macos" %}
    "Operating System :: MacOS",
    {%- endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    # for EOL versions see: https://devguide.python.org/versions/
    {%- set min_version = cookiecutter.supported_python_version.split('.')[-1] | int %}
    {#- NOTE: keep the range() upper bound below in sync with the highest version
       offered by cookiecutter.json's supported_python_version choices #}
    {%- for minor in range(10, 15) %}
    {%- if minor >= min_version %}
    "Programming Language :: Python :: 3.{{ minor }}",
    {%- endif %}
    {%- endfor %}
]

dependencies = [
    {%- if cookiecutter.command_line_interface|lower == "click" %}
    "click",
    {%- endif %}
    {%- if cookiecutter.command_line_interface|lower == "docopt" %}
    "docopt",
    {%- endif %}
    {%- if cookiecutter.use_logging == "y" or cookiecutter.config_file == "yaml" or cookiecutter.config_file == "all" %}
    "pyyaml",
    {%- endif %}
    {%- if cookiecutter.config_file == "toml" or cookiecutter.config_file == "all" %}
    "toml",
    {%- endif %}
    {%- if cookiecutter.command_line_interface|lower == "typer" %}
    "typer[all]",
    {%- endif %}
    {%- if cookiecutter.resource_file == "png" or cookiecutter.resource_file == "all" %}
    "Pillow",
    {%- endif %}
]

[project.urls]
Homepage      = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}"
Download      = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/archive/refs/heads/{{ cookiecutter.initial_git_branch_name }}.zip"
Documentation = "https://{{ cookiecutter.pkg_name }}.readthedocs.io/en/latest/"
CI            = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/actions"
"Release Notes" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/releases"
"Source Code" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/"
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/issues"

[project.scripts]
{{ cookiecutter.pkg_name }} = "{{ cookiecutter.pkg_name }}.{{ cookiecutter.pkg_name }}:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"{{ cookiecutter.pkg_name }}" = [
    {%- if cookiecutter.config_file == "json" or cookiecutter.config_file == "all" %}
    "resources/config.json",
    {%- endif %}
    {%- if cookiecutter.config_file == "ini" or cookiecutter.config_file == "all" %}
    "resources/config.ini",
    {%- endif %}
    {%- if cookiecutter.config_file == "toml" or cookiecutter.config_file == "all" %}
    "resources/config.toml",
    {%- endif %}
    {%- if cookiecutter.config_file == "yaml" or cookiecutter.config_file == "all" %}
    "resources/config.yaml",
    {%- endif %}
    {%- if cookiecutter.resource_file == "pickle" or cookiecutter.resource_file == "all" %}
    "resources/resource.pickle",
    {%- endif %}
    {%- if cookiecutter.resource_file == "png" or cookiecutter.resource_file == "all" %}
    "resources/resource.png",
    {%- endif %}
    {%- if cookiecutter.resource_file == "sqlite" or cookiecutter.resource_file == "all" %}
    "resources/resource.db",
    {%- endif %}
]
{%- if cookiecutter.use_black == 'y' %}

[tool.black]
line-length = 88
{%- endif %}
{%- if cookiecutter.use_cruft == 'y' %}

[tool.cruft]
skip = [
    "tests/",
    "src/",
    "*/header.png",
    ".pypirc",
    "CHANGELOG.md",
]
{%- endif %}
{%- if cookiecutter.use_isort == 'y' %}

[tool.isort]
profile = "black"
line_length          = 88
import_heading_stdlib      = "Core Library modules"
import_heading_thirdparty  = "Third party modules"
import_heading_firstparty  = "First party modules"
import_heading_localfolder = "Local modules"
known_third_party = [
    "click",
    "pytest",
    "setuptools",
    "pip-tools",
    "pre-commit",
]
known_first_party    = ["pathmagic"]
ensure_newline_before_comments = true
combine_as_imports   = true
{%- endif %}
{%- if cookiecutter.use_mypy == 'y' %}

[tool.mypy]
ignore_missing_imports   = true
check_untyped_defs       = true
disallow_untyped_defs    = false
warn_unused_ignores      = true
strict_optional          = true
warn_redundant_casts     = true
warn_unused_configs      = true
disallow_untyped_calls   = false
disallow_incomplete_defs = true
follow_imports           = "normal"
cache_dir                = "cache/.mypy_cache"
mypy_path                = "typeshed/pyi:typeshed/imports"
html_report              = "reports/mypy"
exclude = [
    '^tests/[\w]*.py$',
    '^tools/[\w]*.py$',
    '^docs/[\w]*.py$',
    '^tasks.py$',
]
{%- endif %}
{%- if cookiecutter.version_control in ["python_semantic_release", "both"] %}

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
version_variables = [
    "docs/conf.py:version",
]
build_command     = "python -m build"
commit_message    = "chore: generate release with PSR"

[tool.semantic_release.changelog]
template_dir = ".psr_templates"
file = "CHANGELOG.md"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"
{%- endif %}
{%- if cookiecutter.version_control in ["commitizen", "both"] %}

[tool.commitizen]
name = "cz_conventional_commits"
version = "{{ cookiecutter.version }}"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"
{%- endif %}
{%- if cookiecutter.use_flake8 == 'y' %}

[tool.flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = "{{ cookiecutter.docstrings_style }}"
max-complexity       = 18
max-line-length      = 88
select               = ["B", "B9", "C", "D", "E", "F", "N", "W"]
exclude = ["tests/*", ".tox/*", ".nox/*", "docs/*", ".git/*", ".github/*",]
ignore = [
    # pycodestyle - whitespace before ',', ';', or ':' - compatible with black
    "E203",
    # pycodestyle - line break before binary operator
    "W503",
]
per-file-ignores = [
    # flake8 - module imported but not used
    "__init__.py:F401",
    "pathmagic.py:F401",
    "test_{{ cookiecutter.pkg_name }}.py:F401",
]
{%- endif %}

[tool.pytest.ini_options]
minversion = "9.0.3"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report", "html:reports/coverage",
    "--html=reports/pytest.html",
    "--capture=tee-sys",
    "--durations=10",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
norecursedirs = [".git", ".*", "*.egg*", "docs", "dist", "build"]
markers = [
    "smoke: quick tests of major parts",
    "bugs: tests that reproduce issues",
    "slow: avoid these if in a hurry",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
cache_dir = "cache/.pytest_cache"
xfail_strict = true
log_cli = true
log_cli_level = "INFO"
console_output_style = "progress"

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "docs/*",
    "tests/*",
    "tools/*",
    "tasks.py",
]

[tool.coverage.report]
fail_under    = 70
show_missing = true
precision = 2
skip_empty = true
omit = [
    "docs/*",
    "tests/*",
    "tools/*",
    "tasks.py",
]
exclude_lines = [
    "pragma: no cover",

    # Generally only debug code uses this
    "def __repr__",

    # If a debug setting is set, skip testing
    "if self\\.debug:",
    "if settings.DEBUG",

    # Don't worry about safety checks and expected errors
    "raise AssertionError",
    "raise NotImplementedError",

    # Do not complain about code that will never run
    "if 0:",
    "if __name__ == .__main__.:",
    "@abc.abstractmethod",
]
{%- if cookiecutter.use_bandit == 'y' %}

[tool.bandit]
skips = [
    "B101",  # Ignore defensive `assert`s (especially useful for mypy)
    "B301",  # Pickle and modules that wrap it can be unsafe when used to deserialize untrusted data
    "B403",  # Consider possible security implications associated with pickle module
    "B404",  # Ignore warnings about importing subprocess
    "B603",  # Ignore warnings about calling subprocess.Popen without shell=True
    "B607",  # Ignore warnings about calling subprocess.Popen without a full path to executable
]
{%- endif %}

{% if cookiecutter.use_tox == 'y' -%}
[tool.tox]
requires = ["tox>=4.21"]
work_dir = "cache/.tox"
env_list = [
    {%- if cookiecutter.supported_python_version == ">=3.10" %}
    "py310", "py311", "py312", "py313", "py314",
    {%- elif cookiecutter.supported_python_version == ">=3.11" %}
    "py311", "py312", "py313", "py314",
    {%- elif cookiecutter.supported_python_version == ">=3.12" %}
    "py312", "py313", "py314",
    {%- elif cookiecutter.supported_python_version == ">=3.13" %}
    "py313", "py314",
    {%- elif cookiecutter.supported_python_version == ">=3.14" %}
    "py314",
    {%- endif %}
    "linter",
]

[tool.tox.env_run_base]
deps = ["-r requirements/test.txt"]
commands = [
    ["pip", "install", "-e", "."],
    {%- if cookiecutter.use_pytest == 'y' %}
    ["pytest", "."],
    {%- endif %}
]

[tool.tox.env.linter]
deps = ["-r requirements/test.txt"]
commands = [
    {%- if cookiecutter.use_flake8 == 'y' %}
    ["flake8", "src/{{ cookiecutter.pkg_name }}/."],
    {%- endif %}
    {%- if cookiecutter.use_black == 'y' %}
    ["black", "--check", "src/{{ cookiecutter.pkg_name }}/."],
    {%- endif %}
    {%- if cookiecutter.use_mypy == 'y' %}
    ["mypy", "src/{{ cookiecutter.pkg_name }}/."],
    {%- endif %}
]
{%- endif %}
