# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html?highlight=package_data
[metadata]
name = {{ cookiecutter.pkg_name }}
version = attr: {{ cookiecutter.pkg_name }}.__version__
author = {{ cookiecutter.author_name.replace("\"", "\\\"") }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.author_name.replace("\"", "\\\"") }}
maintainer_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description.replace("\'", "\\\'") }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,
platforms = Any
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}
download_url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.pkg_name }}/archive/refs/heads/main.zip
license = {{ cookiecutter.license }}

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=find:
project_urls=
include_package_data = True
python_requires = >=3.8
install_requires =
    {%- if cookiecutter.command_line_interface|lower == 'click' %}
    click{% endif %}
    {%- if cookiecutter.use_logging == 'y' or cookiecutter.config_file == 'yaml' or cookiecutter.config_file == 'all' %}
    pyyaml{% endif %}
    {%- if cookiecutter.config_file == 'toml' or cookiecutter.config_file == 'all' %}
    toml{% endif %}

[options.packages.find]
where=src

[options.package_data]
{{ cookiecutter.pkg_name }} =
    {%- if cookiecutter.config_file == 'json' or cookiecutter.config_file == 'all' %}
    config.json{% endif %}
    {%- if cookiecutter.config_file == 'ini' or cookiecutter.config_file == 'all' %}
    config.ini{% endif %}
    {%- if cookiecutter.config_file == 'toml' or cookiecutter.config_file == 'all' %}
    config.toml{% endif %}
    {%- if cookiecutter.use_logging == 'y' or cookiecutter.config_file == 'yaml' or cookiecutter.config_file == 'all' %}
    config.yaml{% endif %}

[options.entry_points]
console_scripts =
    {{ cookiecutter.pkg_name }} = {{ cookiecutter.pkg_name }}.{{ cookiecutter.pkg_name }}_cli:cli


{% if cookiecutter.use_flake8 == 'y' -%}
[flake8]
# https://flake8.pycqa.org/en/latest/user/options.html
# flake8 -                F401-F901
# flake8-comprehensions - C400-C416
# flake8-bugbear -        B001-B018, B901-B950
# flake8-docstrings -     D100-D418 (flake8 plugin for pydocstyle)
# pycodestyle -           E101-E902, W191-W606
# pep8-naming -           N801-N818
docstring-convention = {{ cookiecutter.docstrings_style }}
max-complexity = 18
max-line-length = 88
select = B, B9, C, D, E, F, N, W
exclude = tests/*,.tox/*,.nox/*,docs/*,.git/*,.github/*
ignore =
    # pycodestyle - whitespace before ‘,’, ‘;’, or ‘:’ - to be compatible with black
    E203,
    # pycodestyle - line break before binary operator
    W503,
per-file-ignores =
    # flake8 - module imported but not used
    __init__.py:F401
    pathmagic.py:F401
    test_{{ cookiecutter.pkg_name }}.py:F401
{%- endif %}